styles.css
/* * {
  margin: 0;
  padding: 0;;
} */

body {
  background-color: hsl(30, 38%, 92%);
}

.card {
  background-color: hsl(0, 0%, 100%);
  display: flex;
  flex-direction: column;
  border-radius: 12px;
  margin: 25px 10px;
}

.card > *:not(:first-child) {
  padding-left: 22px;
}

.card img {
  max-width: 100%;
  border-radius: 12px 12px 0px 0px;
}

h2 {
  font-family: 'Montserrat', sans-serif;
  font-weight: 500;
  text-transform: uppercase;
  letter-spacing: 0.3em;
  font-size: 12px;
  color: hsl(228, 12%, 48%);
  margin: 18px 0px 10px;
}

h1 {
  font-family: 'Fraunces', serif;
  margin: 8px 0px 5px;
  line-height: 1em;
}

#description {
  font-family: 'Montserrat', sans-serif;
  font-weight: 500;
  font-size: 14px;
  color: hsl(228, 12%, 48%);
  line-height: 1.75em;
  width: 92%;
  margin-bottom: 7px;
}

.prices {
  display: flex;
  align-items: center;
}

#sales-price {
  font-family: 'Fraunces', serif;
  color: hsl(158, 36%, 37%);
  font-size: 32px;
  padding-right: 20px;
  margin: 10px 0px 16px;
}

#regular-price {
  font-family: 'Montserrat', sans-serif;
  text-decoration: line-through;
  color: hsl(228, 12%, 48%);
  font-size: 13px;
} 

button {
  border: 0;
  border-radius: 9px;
  width: 300px;
  height: 45px;
  background-color: hsl(158, 36%, 37%);
  font-family: 'Montserrat', sans-serif;
  color: hsl(0, 0%, 100%);
  margin-bottom: 20px;
}

button:hover {
  background-color: hsl(160, 46%, 22%);
}

button > img {
  padding-right: 6px;
}

@media all and (min-device-width: 600px) {
  .card {
    flex-direction: row;
    width: 1000px;
  }

  .card img {
    max-width: 100%;
    max-height: 100%;
    border-radius: 12px 0px 0px 12px;
  }
}

